<?xml version="1.0"?>
<package format="2">
  <name>pandar_api</name>
  <version>0.0.0</version>
  <description>
    TCP API client for Hesai LiDARSs.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
</package>
