<?xml version="1.0"?>
<package format="2">
  <name>pandar_driver</name>
  <version>0.0.0</version>
  <description>
    ROS driver for Hesai LiDARSs.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pandar_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pandar_msgs</exec_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_pandar_driver.xml"/>
  </export>
</package>
