<?xml version="1.0"?>
<package format="2">
  <name>pandar_driver</name>
  <version>0.0.0</version>
  <description>
    ROS driver for Hesai LiDARSs.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>pandar_msgs</depend>
  <depend>pandar_api</depend>
  <depend>libpcap</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_pandar_driver.xml"/>
  </export>
</package>
