<?xml version="1.0"?>
<package format="3">
  <name>pandar_monitor</name>
  <version>0.1.0</version>
  <description>The pandar_monitor package</description>
  <maintainer email="shinnosuke.hirakawa@tier4.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>fmt</depend>
  <depend>boost</depend>
  <depend>std_msgs</depend>
  <depend>pandar_api</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
