<?xml version="1.0"?>
<package format="2">
  <name>pandar_monitor</name>
  <version>0.1.0</version>
  <description>The pandar_monitor package</description>
  <maintainer email="fumihito.ito@tier4.jp">Fumihito Ito</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>fmt</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pandar_api</depend>
  <depend>libcpprest-dev</depend>

</package>
