<?xml version="1.0"?>
<package format="2">
  <name>pandar_msgs</name>
  <version>0.0.0</version>
  <description> ROS message definition for the Heisai Pandar128/PandarQT128/PandarQT/Pandar64/Pandar40P/Pandar20A/Pandar20B/Pandar40M LiDAR sensor.
  </description>
  <maintainer email="shinnosuke.hirakawa@tier.jp">hirakawa</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
